# sysd-manager

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build-for-fedora.sh  build-tools  build.rs  copr-packaging  coprtest.py  create_rpm  crowdin.yml  goflathub  gtk.md  install.sh  install_service  install_tiny  io.github.plrigaux.sysd-manager.yaml  meson.build  org.tool.sysd-manager.json  org.tool.sysd-manager.yaml  org.tool.sysd-manager.yml  pyproject.toml  rust-sysd-manager.spec  rustfmt.toml  sysd-manager.spec  tag_version  testbus.py  uninstall.sh
.cargo/: config.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
build-aux/: cargo.sh  org.tool.sysd-manager.Devel.json
build_aux/: build_common.py
data/: meson.build
data/applications/: io.github.plrigaux.sysd-manager.desktop  org.freedesktop.policykit.sysd-manager.policy  org.tool.sysd-manager.desktop
data/icons/hicolor/scalable/: meson.build
data/interfaces/: SysdMngr.cmb  app_window.ui  button_icon.ui  cambalache-project.dtd  clean_dialog.ui  control_action_dialog.ui  enable_unit_dialog.ui  ex_menu_button.ui  flatpak_dialog.ui  journal_panel.cmb  journal_panel.ui  journal_row.ui  kill_panel.ui  list_boots.ui  mask_unit_dialog.ui  menu.ui  preferences.ui  service_status.ui  shortcuts.ui  side_control_panel.ui  signal_row.ui  signals_window.ui  sysdmngr.ui  text_find.ui  text_search.ui  title_bar.ui  unit_control_panel.ui  unit_dependencies_panel.ui  unit_file_panel copy.ui  unit_file_panel.ui  unit_info.ui  unit_info_panel.ui  unit_list_filter.ui  unit_list_legend.ui  unit_list_panel.ui  unit_list_search.ui  unit_pop_menu.ui  unit_properties.ui  unit_properties_selection.ui  unit_properties_selection_row.ui  (+1 more)
data/interfaces/creator/: Creator.cmb  Creator.ui  creator_end_page.ui  service_creator_page.ui  timer_creator_page.ui
data/metainfo/: io.github.plrigaux.sysd-manager.metainfo.xml  org.tool.sysd-manager.metainfo.xml
data/resources/: resources.gresource.xml
data/schemas/: gschemas.compiled  io.github.plrigaux.sysd-manager.gschema.xml
data/styles/: base.css  style.css  style_dark.css
fr/po/: en_GB.po  fr.po  pt_BR.po
packaging/: appimg  build-tools  fast  goflathub  install_tiny  pacaur  pacdeb  pubcargo  tag_version
packaging/appimage/: build_appimage.py  start
packaging/aur/: PKGBUILD  packaging.py
packaging/build_aux/: build_common.py  tag_version.py  write_to_file.py
packaging/copr/: rust-sysd-manager.spec
packaging/deb/: make_deb.py
packaging/flathub/: goflathub.py  io.github.plrigaux.sysd-manager.yaml
po/: LINGUAS  POTFILES  cs.po  de.po  en_GB.po  es.po  et.po  fr.po  fr.po.orig  fr_BACKUP_99226.po  fr_BASE_99226.po  fr_REMOTE_99226.po  it.po  pt.po  pt_BR.po  ru.po  sysd-manager.pot  uk.po  zh_Hans.po
pt-BR/po/: en_GB.po  fr.po  pt_BR.po
resources/: resources.gresource.xml  sysd-manager.desktop
resources/resources/: resources.gresource.xml
scripts/: install.sh  test_rustv.sh  uninstall.sh
src/: consts.rs  errors.rs  flatpak.rs  interface4.glade  main.rs  meson.build  settings.rs  systemd_gui.rs
src/analyze/: mod.rs
src/grid_cell/: imp.rs
src/icon_label_button/: mod.rs
src/info/: mod.rs
src/menu/: mod.rs
src/systemd/: analyze.rs  data.rs  dbus.rs  enums.rs  errors.rs  journal.rs  journal_data.rs  mod.rs  sysdbus.rs  systemctl.rs
src/systemd/sysdbus/: tests.rs  watcher.rs
src/title_bar/: mod.rs
src/utils/: font_management.rs  mod.rs  more_colors.rs  palette.rs  text_view_hyperlink.rs  time_handling.rs  writer.rs
src/widget/: journal.rs  mod.rs  preferences.rs  service_info.rs
src/widget/app_window/: controls.rs  imp.rs  menu.rs  mod.rs
src/widget/button_icon/: mod.rs
src/widget/clean_dialog/: imp.rs  mod.rs
src/widget/control_action_dialog/: imp.rs  mod.rs
src/widget/creator/: imp.rs  mod.rs  service_creator_page.rs  timer_creator_page.rs
src/widget/enable_unit_dialog/: imp.rs  mod.rs
src/widget/grid_cell/: imp.rs  mod.rs
src/widget/info_window/: imp.rs  mod.rs  rowitem.rs
src/widget/journal/: colorise.rs  colorize.rs  imp.rs  journal_row.rs  list_boots.rs  mod.rs  more_colors.rs  rowitem.rs
src/widget/kill_panel/: imp.rs  mod.rs
src/widget/mask_unit_dialog/: imp.rs  mod.rs
src/widget/menu_button/: ex_menu_button.ui  imp.rs  mod.rs
src/widget/preferences/: data.rs  drop_down_elem.rs  imp.rs  mod.rs  style_scheme.rs
src/widget/service_info/: imp.rs  (+1 more)
sysd-manager-base/: Cargo.toml
sysd-manager-base/src/: consts.rs  enums.rs  file.rs  lib.rs  proxy.rs
sysd-manager-comcontroler/: Cargo.toml
sysd-manager-comcontroler/src/: analyze.rs  data.rs  enums.rs  errors.rs  file.rs  journal.rs  journal_data.rs  lib.rs  manager.rs  proxy_switcher.rs  socket_unit.rs  sysdbus.rs  test_utils.rs  time_handling.rs  to_proxy.rs
sysd-manager-comcontroler/src/sysdbus/: dbus_proxies.rs  tests.rs  to_proxy.rs  watcher.rs
sysd-manager-fondation/: Cargo.toml
sysd-manager-proxy/: Cargo.toml  build.rs  org.zbus.MyGreeter.conf
sysd-manager-proxy/data/: 50-io.github.plrigaux.SysDManager.rules  50-io.github.plrigaux.SysDManagerDev.rules  io.github.plrigaux.SysDManager.conf  io.github.plrigaux.SysDManager.policy  io.github.plrigaux.sysd-manager.conf  org.zbus.MyGreeter.conf  resources.gresource.xml  sysd-manager-proxy.service  test calls.txt
sysd-manager-proxy/scripts/: install.sh
sysd-manager-proxy/src/: consts.rs  file.rs  install.rs  interface.rs  lib.rs  main.rs  sysdcom.rs
sysd-manager-proxy/tests/: proxy_test.rs
sysd-manager-test-base/: Cargo.toml
sysd-manager-test-base/src/: lib.rs
sysd-manager-translating/: Cargo.toml  README.md
sysd-manager-translating/src/: error.rs  lib.rs
sysd_test_service/: .env  Cargo.toml  install_service
sysd_test_service/build_aux/: build_common.py
sysd_test_service/src/: main.rs
tiny_daemon/: Cargo.toml  README.md
tiny_daemon/src/: main.rs
translang/: Cargo.toml
translang/src/: main.rs
translating/: Cargo.toml
translating/src/: error.rs  lib.rs
transtools/: Cargo.toml
transtools/src/: main.rs
(+61 files in other folders)
