[workspace]
members = ["transtools", "sysd-manager-translating", "tiny_daemon", "sysd-manager-proxy", "sysd-manager-comcontroler"]

[workspace.package]
edition = "2024"
rust-version = "1.89"
authors = ["Pierre-Luc Rigaux <plrigaux@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/plrigaux/sysd-manager"

[package]
name = "sysd-manager"
version = "2.9.2"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"
authors = { workspace = true }
description = "Application to empower user to manage their <b>systemd units</b> via Graphical User Interface. Not only are you able to make changes to the enablement and running status of each of the units, but you will also be able to view and modify their unit files and check the journal logs."
keywords = ["gtk4", "linux", "systemd"]
rust-version = { workspace = true }

include = [
    "build.rs",
    "/src",
    "LICENSE",
    "README.md",
    "/data",
    "!/**/meson.build",
    "/po",
]
default-run = "sysd-manager"

[[bin]]
name = "sysd-manager"
path = "src/main.rs"

[features]
default = ["systemd/default"]
flatpak = ["systemd/flatpak"]

[profile.release]
lto = true

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
constcat = "0.6"
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.11"
enumflags2 = "0.7"
gettext-rs = { version = "0.7.2", features = ["gettext-system"] }
glib = { version = "0", package = "glib", features = ["v2_84"] }
libc = "0.2"
log = "0.4"
regex = "1.12"
serde = "1.0"
strum = { version = "0.27", features = ["derive"] }
tokio-util = "0.7"
tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["fmt", "time"]}
tracing-journald = "0.3"
zvariant = "5"
zbus = { version = "5.11", default-features = false, features = [
    "tokio",
    "blocking-api",
] }

[dependencies]
pango = { version = "0", package = "pango", features = ["v1_56"] }
adw = { version = "0.8", package = "libadwaita", features = ["v1_8"] }
gio = { version = "0", package = "gio", features = ["v2_84"] }
glib.workspace = true
gtk = { version = "0.10", package = "gtk4", features = ["v4_20"] }
chrono.workspace = true
clap.workspace = true
constcat.workspace = true
const_format = "0.2.34"
dotenv.workspace = true
env_logger.workspace = true
enumflags2.workspace = true
formatx = "0.2"
foreign-types-shared = "0.3.1"
futures-util = "0.3"
gettext-rs.workspace = true
libc.workspace = true
log.workspace = true
regex.workspace = true
serde.workspace = true
sourceview5 = "0.10"
strum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml = "0.9"
zvariant.workspace = true


systemd = { version = "0.1.0", path = "./sysd-manager-comcontroler", package = "sysd-manager-comcontroler" , optional = true }


[dev-dependencies]

[build-dependencies]
#glib-build-tools = "0.19.0"
#cargo-generate-rpm = "0.14.1"
quick-xml = "0.38"
translating = { version = "0.4.2", path = "./sysd-manager-translating", package = "sysd-manager-translating" }
