project('sysd-manager',
 'rust',
    version         : '0.0.1',
    license         : 'GPL-3.0+',
    meson_version   : '>=1.4.0')


#subdir('resources')
#subdir('src')
#
#sources = [
#    'main.rs',
#]
#
#cargo_script = find_program(join_paths(meson.source_root(), 'build-aux/cargo.sh'))
#cargo_release = custom_target(
#  'cargo-build',
#  build_by_default: true,
#  input: sources,
#  output: meson.project_name(),
#  console: true,
#  install: true,
#  install_dir: get_option('bindir'),
#  command: [
#    cargo_script,
#    meson.build_root(),
#    meson.source_root(),
#    '@OUTPUT@',
#    get_option('buildtype'),
#    meson.project_name(),
#  ]
#)