[package]
name = "sysd-manager-base"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
constcat.workspace = true
gettext-rs.workspace = true
glib.workspace = true
libc.workspace = true
serde.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-journald.workspace = true
zvariant.workspace = true
