[package]
name = "sysd-manager-base"
version = "2.13.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Base crate for sysd-manager providing common utilities and types."

[features]
default = []
flatpak = []

[dependencies]
constcat.workspace = true
gettext-rs.workspace = true
glib.workspace = true
libc.workspace = true
serde.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-journald.workspace = true
zvariant.workspace = true


[dev-dependencies]
test-base.workspace = true
