[package]
name = "sysd-manager-comcontroler"
version = "2.14.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Communication controller for sysd-manager."
keywords = ["dbus", "sysd-manager"]

[lib]

[features]
default = []
flatpak = []

[dependencies]
base.workspace = true
chrono.workspace = true
enumflags2.workspace = true
flagset.workspace = true
futures-util = "0.3"
gettext-rs.workspace = true
glib.workspace = true
gio.workspace = true
libc.workspace = true
regex.workspace = true
serde.workspace = true
strum.workspace = true
sysd = { version = "0.10", package = "systemd" }
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true
zbus_xml = "5"
zvariant.workspace = true
zvariant_derive = "5"
zvariant_utils = "3"


[dev-dependencies]
test-base.workspace = true
