[package]
name = "sysd-manager-proxy"
version = "2.8.1"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
keywords = ["xtext"]
license = { workspace = true }
readme = "README.md"
description = "Simple lib used by sysd-manager to generate mo file"
repository = { workspace = true }


[lib]
name = "sysd_manager_proxy_lib"
path = "src/lib.rs"


[[bin]]
name = "sysd-manager-proxy"
path = "src/main.rs"

[dependencies]
clap.workspace = true
constcat.workspace = true
libc.workspace = true
log.workspace = true
tokio.workspace = true
zbus.workspace = true
env_logger.workspace = true
dotenv.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-journald.workspace = true
zbus_polkit = "5"
enumflags2.workspace = true
time = { version = "0.3", features = ["formatting", "local-offset"] }