[package]
name = "sysd-manager-proxy"
version = "2.8.1"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
keywords = ["systemd", "dbus", "polkit", "linux"]
license = { workspace = true }
readme = "README.md"
description = "Simple lib used by sysd-manager to perform privileged operations via polkit over D-Bus."
repository = { workspace = true }

[lib]
name = "sysd_manager_proxy_lib"
path = "src/lib.rs"

[[bin]]
name = "sysd-manager-proxy"
path = "src/main.rs"

[features]
default = []
flatpak = []

[dependencies]
base.workspace = true
clap.workspace = true
libc.workspace = true
log.workspace = true
tokio.workspace = true
zbus.workspace = true
dotenv.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-journald.workspace = true
zbus_polkit = "5"
enumflags2.workspace = true
futures-util = "0.3"

[dev-dependencies]
test-base.workspace = true
