[package]
name = "sysd-manager-proxy"
version = "2.10.1"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
keywords = ["systemd", "dbus", "polkit", "linux"]
license = { workspace = true }
readme = "README.md"
description = "Simple lib used by sysd-manager to perform privileged operations via polkit over D-Bus."
repository = { workspace = true }
build = "build.rs"

[lib]
name = "sysd_manager_proxy_lib"
path = "src/lib.rs"

[[bin]]
name = "sysd-manager-proxy"
path = "src/main.rs"

[features]
default = []

[dependencies]
base.workspace = true
clap.workspace = true
dotenv.workspace = true
enumflags2.workspace = true
futures-util = "0.3"
glib.workspace = true
libc.workspace = true
log.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-journald.workspace = true
zbus.workspace = true
zbus_polkit = "5"

[dev-dependencies]
test-base.workspace = true
