[package]
name = "tiny_daemon"
version = "0.1.6"
repository = "https://github.com/plrigaux/sysd-manager"
readme = "README.md"
description = "A Test service"
keywords = ["linux", "systemd"]
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true


[dependencies]
anstyle = "1"
axum = "0.8"
clap.workspace = true
env_logger = "0.11"
libc.workspace = true
log.workspace = true
signal-hook = "0.3"
tokio.workspace = true