[package]
name = "tiny_daemon"
version = "0.2.0"
repository = "https://github.com/plrigaux/sysd-manager"
readme = "README.md"
description = "A Test service"
keywords = ["linux", "systemd"]
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true


[dependencies]
anstyle = "1"
axum = "0.8"
clap.workspace = true
env_logger = "0.11"
libc.workspace = true
signal-hook = "0.3"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
tracing-journald = "0.3"
