[package]
name = "transtools"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository = { workspace = true }

[dependencies]
translating = { package = "sysd-manager-translating", path = "../sysd-manager-translating" }
clap.workspace = true
log.workspace = true